@@ -39,11 +39,18 @@ public interface ConfigValue {
     String getName();
 
     /**
-     * The value of the property lookup.
+     * The value of the property lookup with transformations (expanded, etc).
      *
-     * @return the raw value of the property lookup or {@code null} if the property could not be found
+     * @return the value of the property lookup or {@code null} if the property could not be found
      */
     String getValue();
+
+    /**
+     * The value of the property lookup without any transformation (expanded , etc).
+     *
+     * @return the raw value of the property lookup or {@code null} if the property could not be found.
+     */
+    String getRawValue();
 
     /**
      * The {@link org.eclipse.microprofile.config.spi.ConfigSource} name that loaded the property lookup.
